# perf.ink

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  dummy_test.py  fly.toml  manage.py  pyproject.toml  splatnet.py  tailwind.config.js  template.env
.devcontainer/: devcontainer.json  docker-compose.yml  on_create  post_create
.github/workflows/: deploy.yml
app/: admin.py  conftest.py  factories.py  forms.py  models.py  models_test.py  services.py  services_test.py  tasks.py  tasks_test.py  urls.py  views.py
app/management/commands/: backfill_salmon_run_shift_details.py  seeddata.py
app/migrations/: 0001_initial.py  0002_splatnetsession_nintendosession.py  0003_salmonrunshiftsummaryraw_salmonrunshiftdetailraw_and_more.py  0004_salmonrunshiftdetailraw_summary.py  0005_backfill_salmonrunshiftdetailraw_summary.py  0006_alter_salmonrunshiftdetailraw_summary.py  0007_salmonrunrotation_salmonrunshiftsummaryraw_rotation.py  0008_salmonrunshiftsummaryraw_played_at.py  0009_backfill_salmonrunshiftsummaryraw_played_at.py  0010_alter_salmonrunshiftsummaryraw_played_at.py  0011_salmonrunshiftsummary_and_more.py  0012_backfill_salmonrunshiftsummary.py  0013_salmonrunwave_salmonrunshiftplayer_and_more.py  0014_alter_salmonrunshiftsummary_rotation.py  0015_alter_salmonrunshiftdetail_smell_meter.py
app/templates/account/: logout.html
app/templates/app/: base.html  home.html  new_nintendo_session.html  profile.html  rotations_detail.html  rotations_index.html  salmon_run_shift_detail.html  shifts_index.html  shifts_show.html  statistics_index.html
app/templatetags/: app_extras.py
perf_ink/: __init__.py  asgi.py  celery.py  config.py  context_processors.py  settings.py  urls.py  wsgi.py
