[tool.poetry]
name = "perf_ink"
version = "0.1.0"
description = ""
authors = ["Jiayu Yi <yijiayu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
typer = "^0.6.1"
structlog = "^22.1.0"
Django = "^4.1.1"
psycopg2 = "^2.9.4"
django-allauth = "^0.51.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
celery = {extras = ["redis"], version = "^5.2.7"}
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
sentry-sdk = "^1.9.10"
django-tailwind = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
